# hello

./: CMakeLists.txt  README.md  hello.c  hello.h
example/: printhello.c
